--- a/style.css
+++ b/style.css
@@ -1,13 +1,18 @@
 /* Set default font family, background color, and text color */
 body {
   font-family: Arial, sans-serif;
-  background-color: #e6e6e6;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   display: flex;
-  background-size: cover;
   position:relative;
+  background-color: #d2903f;
   color: #000000;
-  
+  background-image: url(Images/premium_photo.jpeg);
+  padding-top: 3cm;
+  height: 500px;
+  background-size:cover;
+  background-repeat: no-repeat;
+  background-position:absolute;
+  color: rgb(73, 70, 70);
 }
 
 
@@ -16,22 +21,23 @@ body {
 #heading {
 color: 
 #000000;
-margin-right: 5em;
+margin-left: 1cm;
 font-size: 8em;
 font-weight: bold;
 position: absolute;
-margin-top: .2em;
+margin-top: -1em;
 
 }
 
 
 /* Style the form container */
 form {
-  max-width: 5000px;
+  max-width: fit-content;
+  max-height: fit-content;
   margin-left: 55em;
-  margin-top: 2em;
+  margin-top: -4em;
   /* From https://css.glass */
-  background: rgba(36, 36, 36, 0.1);
+  background: rgba(22, 22, 22, 0.1);
   border-radius: 26px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(2.7px);
@@ -41,7 +47,7 @@ form {
   overflow-y: auto;
   border-radius: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  position: relative;
+  position: absolute;
 }
 
 /* Style form labels */
@@ -49,7 +55,7 @@ label {
   display: block;
   margin-bottom: 10px;
   font-weight: bold;
-  color: #575761;
+  color: #3a3a3b;
 }
 
 /* Style text inputs and text areas */
@@ -58,11 +64,11 @@ textarea {
   width: 95%;
   padding: 5px;
   margin-bottom: 10px;
-  border: 1px solid #767a7d;
+  border: 1px solid #383839;
   border-radius: 5px;
   font-size: 16px;
-  color: #766f6f;
-  background: rgba(187, 179, 179, 0.1);
+  color: #363535;
+  background: rgba(158, 150, 150, 0.1);
 }
 
   /* Style text inputs and text areas */
@@ -70,20 +76,20 @@ textarea {
     width: 89%;
     padding: 3px;
     margin-bottom:-1em;
-    border: 1px solid #767a7d;
+    border: 1px solid #404142;
     border-radius: 5px;
     font-size: 16px;
-    color: #766f6f;
+    color: #434242;
     z-index: 22;
     position: absolute;
     
-    background: rgba(187, 179, 179, 0.1);
+    background: rgba(148, 142, 142, 0.1);
   }
 
 /* Style file input */
 input[type="file"] {
   margin-bottom: 12px;
-  color: #393E41;
+  color: #222324;
   
 }
 
@@ -107,16 +113,18 @@ input[type="file"] {
   z-index 1;
 }
 
+
+
 /* Style form submit button */
 input[type="button"] {
   display: block;
   width: 100%;
   padding: 10px;
-  background-color: #C5C3C6;
+  background-color: #949395;
   
   border: none;
   border-radius: 5px;
-  color: #393E41;
+  color: #1f2121;
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s;
@@ -124,8 +132,8 @@ input[type="button"] {
 
 /* Style submit button on hover */
 input[type="button"]:hover {
-  color: #e6e6e6;
-  background-color:#65696d;
+  color: #c9c8c8;
+  background-color:#404244;
   
 }
 
@@ -142,31 +150,31 @@ input[type="button"]:hover {
 #validEmails p,
 #invalidEmails p {
   font-weight: bold;
-  color: #393E41;
+  color: #2a2d2f;
 }
 
 
 /* Style divs within container for valid and invalid emails */
 #validEmails div {
-color: #393E41;
+color: #202122;
 }
 
 #invalidEmails div {
-color: #393E41;
+color: #212324;
 }
 
 #message{
-  color:#393E41;
+  color:#212425;
 }
 #senderEmail{
-  color:#393E41;
+  color:#242627;
 }
 
 /* Style text inputs and text areas */
 input[type="email"]:focus,
 textarea:focus {
   outline: none !important;
-  border-color: #393d40;
+  border-color: #212324;
  
 }
 #validEmails, #invalidEmails {
@@ -179,12 +187,12 @@ font-weight: 200;
 margin: 0.4em 0;
 z-index: 12;
 position: absolute;
-margin-top: 23em;
+margin-top: 17em;
 margin-left:14em ;
 }
 h1 { font-size: 18px; }
 h1 {
-color: #888;
+color: #414141;
 font-size: 18px;
 }
 
